# sql-proxy-rs

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  docker-enter.sh
.github/workflows/: ci.yaml
autodapp/: .gitignore  Cargo.toml  README.md  docker-compose.yml
autodapp/demo/discourse/: docker-compose.yml
autodapp/src/: main.rs
demo/discourse/: docker-compose.yml
demo/mediawiki/: LocalSettings.php
docker/mediawiki/: LocalSettings.php
examples/: abci.rs  basic.rs  counter.rs  hyper.rs  mariadb.rs  mysql.rs  passthrough.rs  tendermint.rs
scripts/: check.sh  docker-abci.sh  docker-enter.sh  docker-mariadb-server.sh  docker-mariadb.sh  docker-postgres-client.sh  docker-postgres-server.sh  docker-sqlclient.sh  docker-tendermint.sh
src/: lib.rs  packet.rs  packet_handler.rs  pipe.rs  server.rs
tests/: integration_test.rs  mariadb.rs  postgres.rs
