[package]
name = "mariadb-proxy"
version = "0.1.0"
authors = ["Raymond Cheng <me@raymondcheng.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.0"
env_logger = "0.7"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
abci = "0.6"
hyper = "0.13"
mysql = "17.0"
mysql_async = "0.21"
rand = "0.7"
sodiumoxide = "0.2"
sqlparser = "0.5"
