[package]
name = "sql-proxy"
version = "0.1.0"
authors = ["Raymond Cheng <me@raymondcheng.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.22"
byteorder = "1.0"
env_logger = "0.7"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
async-std = "1.5"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
mysql_async = "0.22"
tokio-postgres = "0.5.3"
