[package]
name = "autodapp"
version = "0.1.0"
authors = ["ryscheng"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql-proxy = { path = "../" }
abci = "0.6"
hex = "0.4"
http = "0.2"
hyper = "0.13"
mysql = "18.0"
postgres = "0.17.2"
tokio-postgres = "0.5.3"
rand = "0.7"
sodiumoxide = "0.2"
sqlparser = "0.5"
urlencoding = "1.0"
